test/fails/bad_functions/extern2.lgl
declare void f();

void main() {
    print f();
    return;
}